crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_telegram__adaptivecard_edge_cases.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "normalized_event": {
    "event": {
      "id": "<FIXED>",
      "notes": [
        "unicode-safe",
        "no emoji"
      ],
      "provider": "telegram",
      "text": "Long text with markdown **bold** and newlines\nsecond line",
      "timestamp": "<FIXED>",
      "type": "adaptivecard",
      "variant": "edge"
    },
    "ok": true
  },
  "suggested_http_status": null,
  "validation": "ok",
  "warnings": []
}
