crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_telegram__reply_thread.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "normalized_event": {
    "event": {
      "channel": "telegram-channel",
      "id": "<FIXED>",
      "provider": "telegram",
      "reply_to": "telegram-msg-1",
      "text": "reply thread message from telegram",
      "thread_id": "telegram-thread-1",
      "timestamp": "<FIXED>",
      "type": "message"
    },
    "ok": true
  },
  "suggested_http_status": null,
  "validation": "ok",
  "warnings": []
}
