crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_telegram__simple_text.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "normalized_event": {
    "event": {
      "channel": "telegram-channel",
      "id": "<FIXED>",
      "provider": "telegram",
      "text": "simple text message from telegram",
      "timestamp": "<FIXED>",
      "type": "message"
    },
    "ok": true
  },
  "suggested_http_status": null,
  "validation": "ok",
  "warnings": []
}
